[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "skycoll"
version = "0.1.0"
description = "Bluesky/AT Protocol social-graph CLI — twecoll equivalent"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1",
    "atproto>=0.0.50,<1",
    "cryptography>=43.0,<45",
    "cbor2>=5.6,<6",
]

[project.optional-dependencies]
graph = ["python-igraph>=0.11"]
dev = ["pytest>=8.0", "pytest-httpx>=0.30"]

[project.scripts]
skycoll = "skycoll.__main__:main"