[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skycoll"
version = "0.2.0"
description = "Bluesky/AT Protocol social-graph CLI — twecoll equivalent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "j4ckxyz", email = "j4ckxyz@users.noreply.github.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27,<1",
    "atproto>=0.0.50,<1",
    "cryptography>=43.0,<45",
    "cbor2>=5.6,<6",
]

[project.optional-dependencies]
graph = ["python-igraph>=0.11"]
dev = ["pytest>=8.0", "pytest-httpx>=0.30"]

[project.urls]
Homepage = "https://github.com/j4ckxyz/skycoll"
Repository = "https://github.com/j4ckxyz/skycoll"

[project.scripts]
skycoll = "skycoll.__main__:main"